packages/firelet/firelet-0.5.0a2.tar.gz/firelet-0.5.0a2/test/iptables-save-BorderFW-correct
# Created by Firelet for host BorderFW
*filter
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD  -p udp -s 10.66.1.3 -d 172.16.2.223 --dport 123 -j LOG --log-level 0 --log-prefix ntp
-A FORWARD  -p udp -s 10.66.1.3 -d 172.16.2.223 --dport 123 -j ACCEPT
-A FORWARD  -j LOG --log-level 1 --log-prefix default
-A FORWARD  -j DROP
-A FORWARD  -j LOG --log-level 1 --log-prefix default
-A FORWARD  -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT  -p tcp -s 10.66.1.2 -d 10.66.1.1 --dport 443 -j ACCEPT
-A INPUT -i eth1  -s 10.66.1.3 -d 10.66.1.1 -j LOG --log-level 3 --log-prefix NoSmeagol
-A INPUT  -s 10.66.1.3 -d 10.66.1.1 -j DROP
-A INPUT  -p udp -s 10.66.1.3 -d 172.16.2.223 --dport 123 -j ACCEPT
-A INPUT  -p udp -s 10.66.2.2 -d 172.16.2.223 --dport 123 -j ACCEPT
-A INPUT -i eth0  -j LOG --log-level 1 --log-prefix default
-A INPUT  -j DROP
-A INPUT -i eth1  -j LOG --log-level 1 --log-prefix default
-A INPUT  -j DROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT  -p tcp -s 10.66.1.1 -d 10.66.2.0/24 --dport 22 -j LOG --log-level 2 --log-prefix ssh_mgmt
-A OUTPUT  -p tcp -s 10.66.1.1 -d 10.66.2.0/24 --dport 22 -j ACCEPT
-A OUTPUT  -p udp -s 172.16.2.223 -d 10.66.1.3 --dport 123 -j ACCEPT
-A OUTPUT  -j LOG --log-level 1 --log-prefix default
-A OUTPUT  -j DROP
-A OUTPUT  -j LOG --log-level 1 --log-prefix default
-A OUTPUT  -j DROP
COMMIT
