packages/firelet/firelet-0.5.0a2.tar.gz/firelet-0.5.0a2/test/iptables-save-Server001-correct
# Created by Firelet for host Server001
*filter
-A FORWARD -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT  -p tcp -s 10.66.2.1 -d 10.66.2.2 --dport 80 -j ACCEPT
-A INPUT -i eth0  -p tcp -s 10.66.1.1 -d 10.66.2.0/24 --dport 22 -j LOG --log-level 2 --log-prefix ssh_mgmt
-A INPUT  -p tcp -s 10.66.1.1 -d 10.66.2.0/24 --dport 22 -j ACCEPT
-A INPUT -i eth0  -j LOG --log-level 1 --log-prefix default
-A INPUT  -j DROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT  -p tcp -s 10.66.2.2 -d 10.66.1.3 --dport 6660:6669 -j ACCEPT
-A OUTPUT  -p udp -s 10.66.2.2 -d 172.16.2.223 --dport 123 -j ACCEPT
-A OUTPUT  -p udp -s 10.66.2.2 -d 10.66.1.3 --dport 123 -j ACCEPT
-A OUTPUT  -j LOG --log-level 1 --log-prefix default
-A OUTPUT  -j DROP
COMMIT
